Fix game list text overflow & add unrate game function

--- a/packages/app/src/components/game-list-item/styles.scss
+++ b/packages/app/src/components/game-list-item/styles.scss
@@ -1,21 +1,9 @@
 .game-list-item {
-  background-position: 0% 0%;
-  background-clip: text;
-  background-image: linear-gradient(
-    to right,
-    var(--foreground-color) 33%,
-    #ee025b 66%
-  );
-  background-size: 300% 100%;
   border-bottom: 1px solid #333;
   cursor: pointer;
   list-style-type: none;
   padding: 0.3rem;
   user-select: none;
-
-  &:hover {
-    animation: phase 250ms linear forwards;
-  }
 
   &.active {
     color: #ee025b;
@@ -36,13 +24,7 @@
   display: flex;
 
   & > :first-child {
-    display: none;
-    height: 100%;
     margin-right: 0.5rem;
-  }
-
-  & > :last-child {
-    margin-left: 0.5rem;
   }
 }
 
@@ -50,6 +32,9 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 0.5rem;
 }
 
 .selector {
@@ -61,11 +46,12 @@
 }
 
 .game-name {
-  color: transparent;
-  flex-grow: 1;
   font-size: 1.2rem;
   margin: 0.5rem 0;
   padding-left: 0.5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding-right: 0.5rem;
 }
 
 @keyframes nudge {
@@ -79,15 +65,5 @@
 
   100% {
     transform: translateX(0.6rem);
-  }
-}
-
-@keyframes phase {
-  0% {
-    background-position: 0% 0%;
-  }
-
-  100% {
-    background-position: 100% 0%;
   }
 }
