--- a/packages/app/src/components/timeline/styles.scss
+++ b/packages/app/src/components/timeline/styles.scss
@@ -1,6 +1,7 @@
 .timeline {
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
   max-width: 50rem;
 }
 
